Changes file for Business-OnlinePayment-CashCow

$Id: Changes,v 1.15 2007-03-12 07:54:00 jonasbn Exp $

HEAD

- Added Perl::Critic test t/critic.t

- Added kwalitee test, t/kwalitee.t

- Added POD test, t/pod.t

- Added POD coverage test, t/pod-coverage.t

- Updated MANIFEST


RELEASE 0.06 (released Wed Sep  6 2006)

- Fixed problem with handling of CashCow response, it's format for some reason
  seem to have changed, this highlights one of the more serious problems of 
  the interaction with CashCow and that is should be the other way around,
  we should always decline unless we get an ok from CashCow.
    
  I will raise the issue with CashCow.


RELEASE 0.05 (released Mon Sep  4 2006)

- Added some better exception handling of the response from the CashCow gateway

- Removed t/pod.t, obsoleted by Module::Build

- Removed t/pod-coverage.t, obsoleted by Module::Build


RELEASE 0.04 (released Fri Dec 9 2005)

- Added Module::Build generation of Makefile.PL in Build.PL

- Deleted old Makefile.PL

- Possible fix to broken test:
	http://www.nntp.perl.org/group/perl.cpan.testers/261408
	
  I have not been able to recreate the scenario where the tests breaks, but I 
  pilfered a bit in the logic so we can handle one more exception


RELEASE 0.03 (released Wed Oct 17 2005)

- Added version number to prerequisite of Business::OnlinePayment after dealing 
  with weird problems (segmentation fault) - the host with the problew
  was running Business::OnlinePayment 0.00???

  This have just been a bad version-number parsing, there was a valid version 
  of Business::OnlinePayment on the platform in question.
  

RELEASE 0.02 (released Wed Oct 12 2005)

Wed Oct 12 (jonasbn)

- Test coverage 98.6% (as close as we get)

- Cleaned out use of Carp

- Small changes to return values (I hate when modules just die/croak)

- Removed: map_fields method

- Added more unit-tests (_process_response.t)

Tue Oct 11 (jonasbn)
