@@ -12,6 +12,7 @@ t/_process_response.t
 t/CashCow.t
 t/critic.t
 t/kwalitee.t
+t/perlcriticrc
 t/pod-coverage.t
 t/pod.t
 t/Submit.t
